src/objects/DM_Stock_Flow__c.object
<CustomObject>
    <description>Case: This is used to track the stock flow for a DM Material</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Material_Name__c</fullName>
        <label>Material Name</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Stock Flow</relationshipLabel>
        <relationshipName>DM_Stock_Flow</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Type__c</fullName>
        <label>Stock Type</label>
        <picklist>
            <picklistValues>
                <fullName>Increase Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease Stock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>DM Stock Flow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Material_Name__c</columns>
        <columns>Quantity__c</columns>
        <columns>Stock_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DSF-{000000}</displayFormat>
        <label>DM Stock Flow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Stock Flow</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>